--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,6 @@
  *= require bootstrap.min
 *= require brilliantech.base
 *= require brilliantech.railsepm
+* = require timePicker
 *= require_self
  */
