--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,3 +1,8 @@
+    <div class="page-navi login-pageNavi relative">
+        <h3>注册</h3>
+        <a class="btn btn-wzx btn-primary" href>登陆</a>
+    </div>
+    
 <% if @user && @user.errors.any? %>
     <div id="error_explanation" class="error_explanation ">
       <h6>Oops..something wrong with your input</h6>
