add access key to tenant

--- a/app/views/layouts/non_authorized.html.erb
+++ b/app/views/layouts/non_authorized.html.erb
@@ -9,7 +9,7 @@
 <body>
 <div class="wrap-page">
   <div class="page-top">
-    <img src="images/headicon.png"/>
+    <img src="/assets/headicon.png"/>
     <label class="company-name">BrillianTech</label>
     <!--<ul class="setting-navi pull-right">-->
     <!--<li><a >Hello Wayne</a></li>-->
