--- a/app/assets/stylesheets/brilliantech.railsepm.css
+++ b/app/assets/stylesheets/brilliantech.railsepm.css
@@ -204,15 +204,18 @@ b.caret{
 }
 .chart-leftMark{
     width:420px;
-    margin-top:-10px;
+    margin-top:7px;
+    margin-bottom:3px;
 }
 .chart-leftMark>label{
     display:inline-block;
-    margin-right:67px;
-
+    margin-right:37px;
+    font-size:21px;
+    margin-left:24px;
 }
 .chart-leftMark>label.chart-leftMark-view{
-    margin-left:35px
+    margin-left:71px;
+    margin-right:0px;
 }
 .content-condition-part>p{
     margin-bottom:10px;
