--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -11,9 +11,11 @@
      <div class="right-content pull-left" id="right-content">
           <div class="content-condition clearfix">
                <div class="content-condition-part content-condition-leftpart pull-left">
-                    <p class="text-center">
-                         KPI
-                    </p>
+                    <div class="chart-leftMark">
+                         <label>类别</label>
+                         <label>KPI</label>
+                         <label class="chart-leftMark-view">观察点</label>
+                    </div>
                     <%= select_tag :category_id,options_from_collection_for_select(@categories,'id','name'),
                     {:id=>'chart-group',:class=>"pull-left conditionPart-group",:onchange=>"kpi_entries_reinit_by_category('chart-group','kpi-select','chart-kpi','pull-left')"}%>
                     <div id="kpi-select">
