--- a/app/views/entity_groups/_left_menu.html.erb
+++ b/app/views/entity_groups/_left_menu.html.erb
@@ -12,19 +12,19 @@
           <%end%>
           <li>
                <button class="btn btn-primary" onclick="create_entityBlock()">
-                    观察点
+                    创建观察点
                </button>
           </li>
           <div class="absolute creat-entity-block hide" id="creatEntity-block">
                <p>
-                    观察点
+                    创建观察点
                </p>
                <i class="icon-remove pull-right" onclick="close_createEntity()"></i>
                <input type="text" id="creat-newEntity" onkeyup="create_Viewentity(event)"/>
           </div>
           <div class="absolute creat-entity-block hide" id="edit-block">
                <p>
-                    修改
+                    修改观察点
                </p>
                <i class="icon-remove pull-right" onclick="close_editBlock()"></i>
                <input type="text" id="change-leftNavi" onkeyup="change_leftNavi(event)"/>
