--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -66,7 +66,7 @@
                     <input type="radio" name="user[role_id]" data-role="4" value="400">
                     管理员</label>
 
-               <%= submit_tag '保存' %>
+               <%= submit_tag("保存",{:class=>"btn btn-wzx btn-primary"})%>
 
                <% end %>
           </div>
