--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,3 @@
-<div class="middle clearfix" style=" margin-left: 400px; margin-top:10px;"> 
-     <div class="right-content pull-left" id="right-content">
-<img src="/assets/queen.png" />
-</div>
+<div class="middle clearfix startup-middle">
+                  <img src="images/naviPage.png" style="display:table;margin:0 auto"/>
 </div>
