--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -18,16 +18,16 @@
 <div class="page-navi clearfix">
      <ul class="main-navi pull-left">
           <li>
-               <a href="">开始</a>
+               <a href="/">开始</a>
           </li>
           <li>
-               <a href="">仪表盘</a>
+               <a href="#">仪表盘</a>
           </li>
           <li>
                <a  href="<%=analyse_kpi_entries_path%>">分析</a>
           </li>
           <li>
-               <a href="">报告</a>
+               <a href="#">报告</a>
           </li>
           <li class="dropdown">
                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 管理<b class="caret"></b> </a>
