--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,6 +1,6 @@
     <div class="page-navi login-pageNavi relative">
-        <h3>注册</h3>
-        <a class="btn btn-wzx btn-primary" href>登陆</a>
+
+        <a class="btn btn-wzx btn-primary" href='/user_sessions/new'>Login</a>
     </div>
     
 <% if @user && @user.errors.any? %>
