--- a/app/assets/stylesheets/brilliantech.railsepm.css
+++ b/app/assets/stylesheets/brilliantech.railsepm.css
@@ -354,8 +354,8 @@ box-shadow:0 2px 0px #F39C12;
 }
 .dashboard-condition-btn{
     display:table;
-    margin:30px auto 10px;
-    padding:11px 65px !important;
+    margin:30px 0 10px 20px;
+    padding:11px 47px !important;
 }
 /*choose db*/
 .chooseChart-wrap{
@@ -404,6 +404,40 @@ box-shadow:0 2px 0px #F39C12;
 .dashboard-addNew-btn{
     margin-left:30px;
     margin-top:15px;
+}
+.dashboard-block{
+    width:80%;
+}
+ul.dashBoard-show{
+    width:700px;
+    margin:20px auto 0;
+    padding:0;
+    list-style-type: none;
+    display:table;
+}
+ul.dashBoard-show li{
+    background-color:white;
+    width:100%;
+    height:320px;
+    margin-top:20px;
+}
+.dashboard-eachDetail{
+    padding:10px 0;
+    border-bottom:1px solid #ddd
+}
+.dashboard-eachDetail>p{
+    margin-bottom:0px;
+    font-size:18px;
+}
+.dashboard-moreDetail{
+   position:absolute;
+    top:0;
+    right:5px;
+    width:200px;
+    text-align:right;
+}
+.dashboard-moreDetail p{
+    margin-bottom:2px;
 }
 /*****************************************************     manage      **************************************************************/
 ul.manage-group{
