kpi assign category

--- a/app/views/kpis/assign.html.erb
+++ b/app/views/kpis/assign.html.erb
@@ -26,15 +26,15 @@
           <p class="inline">
                KPI:
           </p>
-          <div id="kpi-select" class="inline>
-               <%= select_tag :kpi_id,options_from_collection_for_select(@kpis,'id','name'),{:id=>'delivery-kpi',:class=>"delivery-kpi",:prompt=>'------all------'}%>
+          <div id="kpi-select" class="inline">
+               <%= select_tag :kpi_id,options_from_collection_for_select(@kpis,'id','name'),{:id=>'delivery-kpi',:class=>"delivery-kpi",:prompt=>'------全部------'}%>
           </div>
           <a class="btn btn-wzx btn-primary pull-right" onclick="delivery_Kpi()">分配</a>
      </div>
      <h3 class="normal-blue text-center delivery-mykpiMark">该用户的KPI</h3>
      <div id="user-assigned-kpis">
           <%= render :partial=>'user_kpi'%>
-          </div> 
+     </div>
      <input type="hidden" id="user-id" value="<%= @user_id%>"/>
 </div>
 <script type="text/javascript">
