--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -18,7 +18,7 @@
 <div class="page-navi clearfix">
      <ul class="main-navi pull-left">
           <li>
-               <a href="<%= welcome_path%>">开始</a>
+               <a href="/">开始</a>
           </li>
           <li>
                <a href="#">仪表盘</a>
