--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <div class="middle clearfix startup-middle">
-                  <img src="images/naviPage.png" style="display:table;margin:0 auto"/>
+                  <img src="/assets/naviPage.png" style="display:table;margin:0 auto"/>
 </div>
