--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -50,7 +50,7 @@
                     *组
                </p>
                <%= select_tag :entity,options_from_collection_for_select(@entities,'id','name'),{:id=>'new-user-entity',:name=>'user[entity_id]'}%>
-               <p>
+               <!-- <p>
                     *权限
                </p>
                <label class="radio">
@@ -64,7 +64,7 @@
                     总经理</label>
                <label class="radio">
                     <input type="radio" name="user[role_id]" data-role="4" value="400">
-                    管理员</label>
+                    管理员</label> -->
 
                <%= submit_tag("保存",{:class=>"btn btn-wzx btn-primary"})%>
 
