--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
 <div class="middle clearfix startup-middle">
-                  <img src="/assets/naviPage.png" style="display:table;margin:0 auto"/>
+    <div style="width:880px;position:relative;margin-left:-440px;left:50%;">
+          <img src="/assets/naviPage.png"/>
+    </div>
 </div>
