dashboard 1 pharse done

--- a/app/assets/stylesheets/brilliantech.railsepm.css
+++ b/app/assets/stylesheets/brilliantech.railsepm.css
@@ -396,8 +396,7 @@ box-shadow:0 2px 0px #F39C12;
     cursor:pointer;
     -moz-border-radius:3px;
     -webkit-border-radius:3px;
-    background-image:url("../images/db-chart.png");
-    /*background-image:url("/assets/db-chart.png");*/
+    background-image:url("/assets/db-chart.png");
     background-repeat:no-repeat;
     position:relative;
     color:#ddd;
