--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -21,7 +21,7 @@
                <a href="/">开始</a>
           </li>
           <li>
-               <a href="#">仪表盘</a>
+               <a href="<%=dashboards_path%>">仪表盘</a>
           </li>
           <li>
                <a  href="<%=analyse_kpi_entries_path%>">分析</a>
