--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,6 @@
                <%= yield %>
           </div>
           <%= render :partial=>'shares/message_box'%>
+           <%= render :partial=>'shares/slide_box'%>
      </body>
 </html>
