--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -158,7 +158,5 @@
 </div>
 
 <script type="text/javascript">
-    $(document).ready(function(){
-
-    })
+    $(document).ready(init_component);
 </script>
