--- a/app/views/shares/_message_box.html
+++ b/app/views/shares/_message_box.html
@@ -1,9 +1,3 @@
-<div class="message-box hide" id="MessageBox">
-    <div class="message-heading">
-        <p class="inline-block message-header message-normal">&nbsp;&nbsp;&nbsp;</p>
-        <i class="icon-remove message-remove pull-right" onclick="message_close()"> </i>
-    </div>
-    <div class="message-body">
-        <p></p>
-    </div>
+<div class="message-box" id="MessageBox">
+    <p class="text-center"></p>
 </div>
