--- a/app/views/kpis/assign.html.erb
+++ b/app/views/kpis/assign.html.erb
@@ -3,13 +3,13 @@
      <a class="btn btn-addUser btn-manageUser" onclick="window.history.go(-1)">返回</a>
      <ul class="nav nav-tabs manage-userTab">
           <li>
-               <a href="#">添加用户</a>
+               <a href="<%=new_user_path%>">添加用户</a>
           </li>
           <li>
-               <a href="#">编辑用户</a>
+               <a href="<%=edit_user_path%>">编辑用户</a>
           </li>
           <li class="active">
-               <a href="#">分配权限</a>
+               <a href="#">分配KPI</a>
           </li>
      </ul>
 </div>
