--- a/app/views/kpis/_select_option.html.erb
+++ b/app/views/kpis/_select_option.html.erb
@@ -1,5 +1,9 @@
 <%if @prompt%>
 <%= select_tag :kpi_id,options_from_collection_for_select(@kpis,'id','name'),{:id=>@options[:sid],:class=>@options[:sclass],:prompt=>'------全部------'}%>
 <%else%>
-<%= select_tag :kpi_id,options_from_collection_for_select(@kpis,'id','name'),{:id=>@options[:sid],:class=>@options[:sclass]}%>
+   <select class="<%=@options[:sclass]%>" id="<%=@options[:sid]%>">
+        <%@kpis.each do |kpi|%>
+          <option value="<%=kpi.id%>" interval="<%=kpi.frequency%>"><%=kpi.name%></option>
+        <%end%>
+   </select>
 <%end%>
