--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,13 +2,13 @@
      <a class="btn btn-addUser btn-manageUser" onclick="window.history.go(-1)">返回</a>
      <ul class="nav nav-tabs manage-userTab">
           <li>
-               <a href="#">添加用户</a>
+               <a href="<%=new_user_path%>">添加用户</a>
           </li>
           <li class="active">
                <a href="#">编辑用户</a>
           </li>
           <li>
-               <a href="#">分配KPI</a>
+               <a href="<%=assign_kpi_path%>">分配KPI</a>
           </li>
      </ul>
 </div>
