--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
                <a href="#">编辑用户</a>
           </li>
           <li>
-               <a href="#">分配权限</a>
+               <a href="#">分配KPI</a>
           </li>
      </ul>
 </div>
